updated agreement page

--- a/HTML/agreement.html
+++ b/HTML/agreement.html
@@ -26,11 +26,75 @@
 		  </li>
 	  </div>
 	</nav>
+
     <div class = "container-fluid">
         <div class = "row">
-        agreement page
+			<div class="col-5">
+
+			</div>
+			<div class = "col-4">
+				<h1>
+					Agreement Page
+				</h1>
+			</div>
         </div>
+
+		<div class="row">
+
+			<h2>Team Available Hours</h2>
+
+			<table class="table table-dark">
+				<thead>
+				<tr>
+					<th scope="col"></th>
+					<th scope="col">Sunday</th>
+					<th scope="col">Monday</th>
+					<th scope="col">Tuesday</th>
+					<th scope="col">Wedensday</th>
+					<th scope="col">Thursday</th>
+					<th scope="col">Friday</th>
+					<th scope="col">Saturday</th>
+				</tr>
+				</thead>
+		
+				<tbody>
+				<tr>
+					<th scope="row">Thomas</th>
+					<td id="sunday">All day</td>
+					<td id="monday">All day</td>
+					<td id="tuesday">8pm to 12am</td>
+					<td id="wedensday">8pm to 12am</td>
+					<td id="thursday">8pm to 12am</td>
+					<td id="friday">8pm to 12am</td>
+					<td id="saturday">8pm to 12am</td>
+				</tr>
+				<tr>
+					<th scope="row">Daniel</th>
+					<td id="sunday"></td>
+					<td id="monday"></td>
+					<td id="tuesday"></td>
+					<td id="wedensday"></td>
+					<td id="thursday"></td>
+					<td id="friday"></td>
+					<td id="saturday"></td>
+				</tr>
+				<tr>
+					<th scope="row">Alex</th>
+					<td id="sunday"></td>
+					<td id="monday"></td>
+					<td id="tuesday"></td>
+					<td id="wedensday"></td>
+					<td id="thursday"></td>
+					<td id="friday"></td>
+					<td id="saturday"></td>
+				</tr>
+				</tbody>
+			</table>
+
+		</div>
       <script src="script.js"></script>
     </div>
+
+	
 </body>
 </html>
